--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV1;Integrated Security=True;",
-    "AuthConnection": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;"
+    "DefaultConnection": "Server=tcp:clinicas.database.windows.net,1433;Initial Catalog=clinicaAzure;Persist Security Info=False;User ID=darlin;Password=A$.lksf52sfOsf85l;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;",
+
+    "Default": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV1;Integrated Security=True;",
+    "AuthC": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
+    "AuthConnection": "Server=tcp:clinicas.database.windows.net,1433;Initial Catalog=auth;Persist Security Info=False;User ID=darlin;Password=A$.lksf52sfOsf85l;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
 
   },
   "Token": {
