--- a/appsettings.json
+++ b/appsettings.json
@@ -2,8 +2,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=45.79.204.206;Initial Catalog=ElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
 
-    "Default": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV1;Integrated Security=True;",
-    "AuthC": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
+    "def": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV1;Integrated Security=True;",
+    "aut": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
     "AuthConnection": "Server=45.79.204.206;Initial Catalog=AuthElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
 
   },
