--- a/appsettings.json
+++ b/appsettings.json
@@ -1,9 +1,9 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=45.79.204.206;Initial Catalog=ElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "DefaultConnection": "Server=45.79.204.206;Initial Catalog=ElectronicInvoicesV2;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
 
-    "def": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV1;Integrated Security=True;",
-    "aut": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
+    "Def": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV2;Integrated Security=True;",
+    "Auth": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
     "AuthConnection": "Server=45.79.204.206;Initial Catalog=AuthElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
 
   },
