--- a/appsettings.json
+++ b/appsettings.json
@@ -9,7 +9,7 @@
   },
   "Token": {
     "key": "Soy una persona NICE",
-    "Issuer": "https://inqura.cloud/"
+    "Issuer": "https://inqura.cloud"
   },
   "Logging": {
     "LogLevel": {
