--- a/appsettings.json
+++ b/appsettings.json
@@ -3,7 +3,7 @@
     "DefaultConnection": "Server=45.79.204.206;Initial Catalog=ElectronicInvoicesV2;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
 
     "Def": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV2;Integrated Security=True;",
-    "Auth": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
+    "ut": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
     "AuthConnection": "Server=45.79.204.206;Initial Catalog=AuthElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
 
   },
@@ -17,5 +17,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "https://inqura.cloud/"
+  "AllowedHosts": "*"
 }
