--- a/appsettings.json
+++ b/appsettings.json
@@ -1,10 +1,10 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=45.79.204.206;Initial Catalog=ElectronicInvoicesV2;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
+    "DefaultConnection": "Server=45.79.204.206;Initial Catalog=InquraProd;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;",
 
     "Def": "Data Source=Darlin;Initial Catalog=ElectronicInvoicesV2;Integrated Security=True;",
     "ut": "Data Source=Darlin;Initial Catalog=AuthElectronicInvoicesV1;Integrated Security=True;",
-    "AuthConnection": "Server=45.79.204.206;Initial Catalog=AuthElectronicInvoicesV1;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
+    "AuthConnection": "Server=45.79.204.206;Initial Catalog=AuthProd;Persist Security Info=False;User ID=sa;Password=D@rlinno3l2207;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=True;Connection Timeout=30;"
 
   },
   "Token": {
