--- a/appsettings.json
+++ b/appsettings.json
@@ -18,5 +18,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+
+
+  "IronBarCode.LicenseKey": "IRONSUITE.DARLINNG5.GMAIL.COM.1406-B05D61D9D0-D4MPMC4ZZID5OO-G6KCOUM4547Y-QGLFCC3TBXGO-BSKP4XONGRKH-XTWYR77ZTGDZ-VS4B4KZUQVWN-CIZVY3-T3WGBGY34SCKUA-DEPLOYMENT.TRIAL-6PAAF2.TRIAL.EXPIRES.12.OCT.2023",
   "AllowedHosts": "*"
 }
